--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,33 @@
       referrerpolicy="origin"
     ></script>
     <title>Alfonso De La Guardia</title>
+    <!-- VISA Tracking Code for https://alfonsodelaguardia-portfolio.netlify.app/ -->
+    <script>
+      (function (v, i, s, a) {
+        if (!v._visaSettings) {
+          v._visaSettings = {};
+        }
+        v._visaSettings["4001ad1f-1526-11eb-b589-901b0edac50a"] = {
+          v: "0.3",
+          s: "4001ad1f-1526-11eb-b589-901b0edac50a",
+          a: "1",
+        };
+        _v = i.getElementsByTagName("head")[0];
+        _a = _v;
+        _i = i.createElement("script");
+        _s = _i;
+        _s.defer = "defer";
+        _s.src =
+          s + a + v._visaSettings["4001ad1f-1526-11eb-b589-901b0edac50a"].v;
+        _a.appendChild(_s);
+      })(
+        window,
+        document,
+        "//app-worker.visitor-analytics.io/main",
+        ".js?s=4001ad1f-1526-11eb-b589-901b0edac50a&v="
+      );
+    </script>
+    <!-- VISA Tracking Code for https://alfonsodelaguardia-portfolio.netlify.app/ -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
